examples/test/testpolicy15345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15345
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key47: value14
      key4: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value33
          key42: value34
      podSelector:
        matchLabels:
          key10: value32
          key26: value21
          key47: value24
